Fix h1 spacing, padding, margin

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -70,12 +70,12 @@ main {
 }
 
 h1 {
-  font: italic 300 2rem 'kanit', sans-serif;
+  font: italic 300 2.5rem 'kanit', sans-serif;
   display: block;
   color: white;
   background-color: #000000c0;
   margin-top: 45vh;
-  padding: 15vh 0 15vh 0;
+  padding: 20vh 0 20vh 0;
   line-height: 1.5;
   animation-name: fade-in;
   animation-duration: 5s;
@@ -294,7 +294,7 @@ iframe:hover {
   }
 
   h1 {
-    margin-top: 50vh;
+    margin-top: 60vh;
   }
 }
 
@@ -306,7 +306,13 @@ iframe:hover {
   }
 
   h1 {
+    font: italic 300 2.5rem 'kanit', sans-serif;
+    display: block;
+    color: white;
+    background-color: #000000c0;
     margin-top: 55vh;
+    padding: 5vh 0 5vh 0;
+    line-height: 1.5;
   }
 
   #email-link {
@@ -338,9 +344,11 @@ iframe:hover {
     }
 
     h1 {
-      margin-top: 55vh;
-      font-size: 5rem;
+      margin-top: 60vh;
+      font-size: 4.7rem;
       padding: 2rem 0 3rem 0;
+      line-height: 1;
+  }
     }
 
     .navbar-nav {
@@ -396,7 +404,6 @@ iframe:hover {
 
   h1 {
     margin-top: 45vh;
-    padding: 10rem 0 10rem 0;
   }
 
   main {
@@ -432,7 +439,6 @@ iframe:hover {
 
   h1 {
     margin-top: 55vh;
-    padding: 5rem 0 5rem 0;
   }
 
   .samples-cell {
